完成RFID读卡器的开发；

--- a/STM32F4/F407IGT6-R200_RFID/MDK-ARM/F407IGT6-BASE/F407IGT6-BASE.build_log.htm
+++ b/STM32F4/F407IGT6-R200_RFID/MDK-ARM/F407IGT6-BASE/F407IGT6-BASE.build_log.htm
@@ -22,11 +22,17 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\Coding\STM32_Learning\STM32F4\F407IGT6-R200_RFID\MDK-ARM\F407IGT6-BASE.uvprojx
-Project File Date:  06/03/2024
+Project File Date:  06/04/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'F407IGT6-BASE'
+compiling usart_drive.c...
+linking...
+Program Size: Code=13912 RO-data=1020 RW-data=24 ZI-data=17780  
+FromELF: creating hex file...
+F407IGT6-BASE\F407IGT6-BASE.hex: Warning: Q9931W: Your license for feature Keil will expire in 23 days
+Finished: 0 information, 1 warning and 0 error messages.
 "F407IGT6-BASE\F407IGT6-BASE.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -62,13 +68,13 @@ Package Vendor: Keil
       Include file:  CMSIS/Core/Include/tz_context.h
 
    * Component: Keil::Compiler&ARM Compiler:Event Recorder&DAP@1.5.1
-      Include file:  Config/EventRecorderConf.h
-      Source file:   Source/EventRecorder.c
       Include file:  Include/EventRecorder.h
+      Source file:   Source/EventRecorder.c
+      Include file:  Config/EventRecorderConf.h
 
    * Component: Keil::Compiler&ARM Compiler:I/O:STDOUT&EVR@1.2.0
       Source file:   Source/retarget_io.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
