--- a/jlink_rtt_viewer/MDK-ARM/stm32f405/stm32f405.build_log.htm
+++ b/jlink_rtt_viewer/MDK-ARM/stm32f405/stm32f405.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  12/06/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f405'
+compiling main.c...
+linking...
+Program Size: Code=11818 RO-data=482 RW-data=12 ZI-data=4612  
+FromELF: creating hex file...
 "stm32f405\stm32f405.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
