1、提交新代码。

--- a/jlink_rtt_viewer_rtconsole/MDK-ARM/stm32f405/stm32f405.build_log.htm
+++ b/jlink_rtt_viewer_rtconsole/MDK-ARM/stm32f405/stm32f405.build_log.htm
@@ -26,10 +26,57 @@ Project File Date:  12/10/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f405'
+Rebuild target 'stm32f405'
+compiling gpio.c...
+compiling stm32f4xx_hal_msp.c...
+compiling usart.c...
+compiling stm32f4xx_hal_timebase_tim.c...
 compiling main.c...
+assembling startup_stm32f405xx.s...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_dma.c...
+compiling clock.c...
+compiling system_stm32f4xx.c...
+compiling components.c...
+assembling context_rvds.S...
+compiling cpu.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling idle.c...
+compiling irq.c...
+compiling stm32f4xx_hal_uart.c...
+compiling stm32f4xx_hal_tim.c...
+compiling mem.c...
+compiling ipc.c...
+compiling memheap.c...
+compiling mempool.c...
+compiling kservice.c...
+compiling object.c...
+compiling scheduler.c...
+compiling slab.c...
+compiling timer.c...
+compiling thread.c...
+compiling cpuport.c...
+compiling finsh_port.c...
+compiling board.c...
+compiling cmd.c...
+compiling msh.c...
+compiling shell.c...
+compiling SEGGER_RTT_printf.c...
+compiling SEGGER_RTT.c...
 linking...
-Program Size: Code=18184 RO-data=2372 RW-data=124 ZI-data=8980  
+Program Size: Code=18204 RO-data=2368 RW-data=124 ZI-data=8980  
 FromELF: creating hex file...
 "stm32f405\stm32f405.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +102,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
