--- a/simplefoc03_stm32f103_velocity/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc03_stm32f103_velocity/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -21,16 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\simplefoc02_stm32f103\MDK-ARM\simplefoc_stm32f103.uvprojx
+D:\Coding\MCU_Develop\simplefoc03_stm32f103_velocity\MDK-ARM\simplefoc_stm32f103.uvprojx
 Project File Date:  12/26/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
 compiling user_main.cpp...
-compiling AS5600_I2C.cpp...
 linking...
-Program Size: Code=17724 RO-data=576 RW-data=28 ZI-data=3100  
+Program Size: Code=17704 RO-data=572 RW-data=28 ZI-data=3108  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
@@ -56,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
