--- a/simplefoc04_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc04_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -21,17 +21,26 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\simplefoc03_stm32f103_velocity\MDK-ARM\simplefoc_stm32f103.uvprojx
-Project File Date:  12/26/2024
+D:\Coding\MCU_Develop\simplefoc04_stm32f103_open_vel_ctrl\MDK-ARM\simplefoc_stm32f103.uvprojx
+Project File Date:  12/27/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
+../simplefoc/drivers/BLDCDriver3PWM.cpp(1): warning: In file included from...
+../simplefoc/drivers/BLDCDriver3PWM.h(8): error: 'hardware_api.h' file not found
+    8 | #include "hardware_api.h"
+      |          ^~~~~~~~~~~~~~~~
+1 error generated.
+compiling BLDCDriver3PWM.cpp...
+../simplefoc/BLDCMotor.cpp(1): warning: In file included from...
+../simplefoc/BLDCMotor.h(4): error: 'Arduino.h' file not found
+    4 | #include "Arduino.h"
+      |          ^~~~~~~~~~~
+1 error generated.
+compiling BLDCMotor.cpp...
 compiling user_main.cpp...
-linking...
-Program Size: Code=17704 RO-data=572 RW-data=28 ZI-data=3108  
-FromELF: creating hex file...
-"simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
+"simplefoc_stm32f103\simplefoc_stm32f103.axf" - 2 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -55,6 +64,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
+Target not created.
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
