--- a/simplefoc04_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc04_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\Coding\MCU_Develop\simplefoc04_stm32f103_open_vel_ctrl\MDK-ARM\simplefoc_stm32f103.uvprojx
-Project File Date:  12/27/2024
+Project File Date:  12/30/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
-compiling tim.c...
+compiling bsp_pwm.c...
 linking...
-Program Size: Code=20244 RO-data=572 RW-data=28 ZI-data=3252  
+Program Size: Code=20288 RO-data=572 RW-data=28 ZI-data=3252  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
