--- a/simplefoc04_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc04_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -28,6 +28,7 @@ Project File Date:  12/30/2024
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
 compiling bsp_pwm.c...
+compiling dwt_timer.c...
 linking...
 Program Size: Code=20288 RO-data=572 RW-data=28 ZI-data=3252  
 FromELF: creating hex file...
@@ -55,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
