--- a/simplefoc03_stm32f103_velocity/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc03_stm32f103_velocity/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -27,7 +27,38 @@ Project File Date:  12/26/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling main.c...
+compiling gpio.c...
+compiling i2c.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_i2c.c...
+compiling system_stm32f1xx.c...
+compiling SEGGER_RTT_printf.c...
+compiling SEGGER_RTT.c...
+compiling foc_utils.cpp...
+compiling time_utils.cpp...
+compiling pid.cpp...
+compiling lowpass_filter.cpp...
+compiling CurrentSense.cpp...
+compiling FOCMotor.cpp...
+compiling dwt_timer.c...
+compiling Sensor.cpp...
 compiling user_main.cpp...
+compiling AS5600_I2C.cpp...
 linking...
 Program Size: Code=17704 RO-data=572 RW-data=28 ZI-data=3108  
 FromELF: creating hex file...
@@ -55,7 +86,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
