--- a/simplefoc05_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc05_stm32f103_open_vel_ctrl/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -26,47 +26,45 @@ Project File Date:  01/03/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'simplefoc_stm32f103'
+Build target 'simplefoc_stm32f103'
+compiling i2c.c...
 compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling gpio.c...
 compiling stm32f1xx_it.c...
 compiling main.c...
-compiling i2c.c...
 compiling tim.c...
-assembling startup_stm32f103xb.s...
-compiling gpio.c...
-compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_tim_ex.c...
 compiling system_stm32f1xx.c...
 compiling SEGGER_RTT_printf.c...
-compiling stm32f1xx_hal_tim_ex.c...
-assembling SEGGER_RTT_ASM_ARMv7M.S...
 compiling stm32f1xx_hal_i2c.c...
 compiling SEGGER_RTT.c...
 compiling foc_utils.cpp...
 compiling stm32f1xx_hal_tim.c...
-compiling time_utils.cpp...
-compiling lowpass_filter.cpp...
 compiling pid.cpp...
+compiling lowpass_filter.cpp...
+compiling time_utils.cpp...
 compiling CurrentSense.cpp...
 compiling FOCMotor.cpp...
 compiling Sensor.cpp...
-compiling dwt_timer.c...
 compiling AS5600_I2C.cpp...
+compiling dwt_timer.c...
 compiling BLDCDriver3PWM.cpp...
 compiling user_main.cpp...
-compiling bsp_pwm.c...
 compiling BLDCMotor.cpp...
+compiling bsp_pwm.c...
 linking...
-Program Size: Code=28580 RO-data=944 RW-data=244 ZI-data=3684  
+Program Size: Code=28932 RO-data=944 RW-data=244 ZI-data=5748  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
@@ -92,7 +90,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
