--- a/simplefoc08_stm32f103_velocity_close/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc08_stm32f103_velocity_close/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -21,15 +21,52 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\simplefoc07_stm32f103_position_close\MDK-ARM\simplefoc_stm32f103.uvprojx
+D:\Coding\MCU_Develop\simplefoc08_stm32f103_velocity_close\MDK-ARM\simplefoc_stm32f103.uvprojx
 Project File Date:  01/03/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'simplefoc_stm32f103'
+Rebuild target 'simplefoc_stm32f103'
+compiling stm32f1xx_hal_msp.c...
+assembling startup_stm32f103xb.s...
+compiling stm32f1xx_it.c...
+compiling gpio.c...
+compiling main.c...
+compiling i2c.c...
+compiling tim.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_exti.c...
+compiling system_stm32f1xx.c...
+assembling SEGGER_RTT_ASM_ARMv7M.S...
+compiling SEGGER_RTT_printf.c...
+compiling stm32f1xx_hal_i2c.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling SEGGER_RTT.c...
+compiling stm32f1xx_hal_tim.c...
+compiling foc_utils.cpp...
+compiling time_utils.cpp...
+compiling lowpass_filter.cpp...
+compiling pid.cpp...
+compiling CurrentSense.cpp...
+compiling FOCMotor.cpp...
+compiling Sensor.cpp...
+compiling dwt_timer.c...
+compiling bsp_pwm.c...
+compiling AS5600_I2C.cpp...
+compiling BLDCDriver3PWM.cpp...
 compiling user_main.cpp...
+compiling BLDCMotor.cpp...
 linking...
-Program Size: Code=29124 RO-data=960 RW-data=248 ZI-data=5744  
+Program Size: Code=29084 RO-data=952 RW-data=248 ZI-data=5744  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +92,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
