--- a/simplefoc09_stm32f103_adc_sample/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc09_stm32f103_adc_sample/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -21,15 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\simplefoc08_stm32f103_velocity_close\MDK-ARM\simplefoc_stm32f103.uvprojx
-Project File Date:  01/03/2025
+D:\Coding\MCU_Develop\simplefoc09_stm32f103_adc_sample\MDK-ARM\simplefoc_stm32f103.uvprojx
+Project File Date:  01/20/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
-compiling user_main.cpp...
+compiling adc.c...
 linking...
-Program Size: Code=29084 RO-data=952 RW-data=248 ZI-data=5744  
+Program Size: Code=31168 RO-data=952 RW-data=248 ZI-data=5792  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
