--- a/simplefoc10_stm32f103_vel_close_with_current/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc10_stm32f103_vel_close_with_current/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -21,15 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\simplefoc09_stm32f103_adc_sample\MDK-ARM\simplefoc_stm32f103.uvprojx
+D:\Coding\MCU_Develop\simplefoc10_stm32f103_vel_close_with_current\MDK-ARM\simplefoc_stm32f103.uvprojx
 Project File Date:  01/21/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
-compiling adc.c...
+compiling user_main.cpp...
 linking...
-Program Size: Code=35244 RO-data=976 RW-data=248 ZI-data=5864  
+Program Size: Code=35196 RO-data=976 RW-data=248 ZI-data=5864  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
