--- a/simplefoc10_stm32f103_vel_close_with_current/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc10_stm32f103_vel_close_with_current/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  01/21/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'simplefoc_stm32f103'
-compiling user_main.cpp...
+compiling main.c...
 linking...
-Program Size: Code=35180 RO-data=976 RW-data=248 ZI-data=5864  
+Program Size: Code=35172 RO-data=976 RW-data=248 ZI-data=5864  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
