--- a/simplefoc11_stm32f103_pos_close_with_current/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc11_stm32f103_pos_close_with_current/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -21,56 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\simplefoc10_stm32f103_vel_close_with_current\MDK-ARM\simplefoc_stm32f103.uvprojx
+D:\Coding\MCU_Develop\simplefoc11_stm32f103_pos_close_with_current\MDK-ARM\simplefoc_stm32f103.uvprojx
 Project File Date:  01/21/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'simplefoc_stm32f103'
-compiling gpio.c...
-compiling tim.c...
-compiling adc.c...
-compiling i2c.c...
-compiling stm32f1xx_it.c...
-compiling main.c...
-assembling startup_stm32f103xb.s...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_adc_ex.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_adc.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_exti.c...
-compiling system_stm32f1xx.c...
-compiling SEGGER_RTT_printf.c...
-compiling stm32f1xx_hal_tim_ex.c...
-assembling SEGGER_RTT_ASM_ARMv7M.S...
-compiling SEGGER_RTT.c...
-compiling stm32f1xx_hal_tim.c...
-compiling foc_utils.cpp...
-compiling stm32f1xx_hal_i2c.c...
-compiling lowpass_filter.cpp...
-compiling pid.cpp...
-compiling time_utils.cpp...
-compiling CurrentSense.cpp...
-compiling FOCMotor.cpp...
-compiling Sensor.cpp...
-compiling BLDCDriver3PWM.cpp...
-compiling InlineCurrentSense.cpp...
+Build target 'simplefoc_stm32f103'
 compiling user_main.cpp...
-compiling dwt_timer.c...
-compiling BLDCMotor.cpp...
-compiling bsp_pwm.c...
-compiling AS5600_I2C.cpp...
 linking...
-Program Size: Code=35236 RO-data=976 RW-data=248 ZI-data=5864  
+Program Size: Code=35268 RO-data=976 RW-data=248 ZI-data=5864  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
@@ -96,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
