--- a/stm32f103_ll_library01_base/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
+++ b/stm32f103_ll_library01_base/MDK-ARM/stm32f103cbtx/stm32f103cbtx.build_log.htm
@@ -26,19 +26,10 @@ Project File Date:  02/19/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103cbtx'
-assembling startup_stm32f103xb.s...
-compiling stm32f1xx_it.c...
-compiling gpio.c...
-compiling stm32f1xx_ll_pwr.c...
-compiling main.c...
-compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_ll_gpio.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_ll_rcc.c...
+Build target 'stm32f103cbtx'
 compiling stm32f1xx_ll_utils.c...
 linking...
-Program Size: Code=1172 RO-data=268 RW-data=4 ZI-data=1036  
+Program Size: Code=1228 RO-data=268 RW-data=4 ZI-data=1036  
 FromELF: creating hex file...
 "stm32f103cbtx\stm32f103cbtx.axf" - 0 Error(s), 0 Warning(s).
 
